--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/controllers.js"></script>
+    <script src="js/controllers/loginController.js"></script>
     <script src="js/services/services.js"></script>
 
     <script src="lib/mqttws31.js"></script>
